# GameScript

./: .gitattributes  .gitignore  CMakeLists.txt  GameScript.kdev4  todo.txt
gs/: Compiler.cpp  Compiler.hpp  CompilerFactory.cpp  CompilerFactory.hpp  Expression.hpp  ExpressionFactory.cpp  ExpressionFactory.hpp  Function.cpp  Function.hpp  FunctionFactory.cpp  FunctionFactory.hpp  ICompiler.hpp  IExpression.hpp  IFunction.hpp  IObject.hpp  IParser.hpp  IScript.hpp  IStatement.hpp  IStatementHandler.hpp  IVariableTable.hpp  Object.hpp  ObjectMapper.cpp  ObjectMapper.hpp  Parser.cpp  Parser.hpp  ParserFactory.cpp  ParserFactory.hpp  Registry.hpp  Script.cpp  Script.hpp  ScriptCompiler.cpp  ScriptCompiler.hpp  ScriptCompilerFactory.cpp  ScriptCompilerFactory.hpp  ScriptFactory.cpp  ScriptFactory.hpp  ScriptFunction.cpp  ScriptFunction.hpp  ScriptInterface.hpp  ScriptParser.cpp  (+17 more)
gs/expr/: MethodCall.cpp  MethodCall.hpp  Object.cpp  Object.hpp
gs/stmt/: CallMethod.cpp  CallMethod.hpp  Return.cpp  Return.hpp
gs/test/: GoogleTestController.cpp  GoogleTestController.hpp  defaultValues.hpp
gs/test/acceptance/: ATFixture.hpp  calls.cpp  localVars.cpp  main.cpp  returns.cpp
gs/test/acceptance/scripts/: callTest1.gs  callTest2.gs  localVar1.gs  localVar2.gs  localVar3.gs  localVar4.gs  localVar5.gs  localVar6.gs  returnTest1.gs  returnTest2.gs  returnTest3.gs
gs/test/unit/: Compiler.cpp  CompilerFactoryMock.hpp  ExpressionFactoryMock.hpp  ExpressionMock.hpp  Function.cpp  FunctionFactoryMock.hpp  FunctionMock.hpp  MappedObjectMock.hpp  ObjectMapper.cpp  ObjectMock.hpp  ObjectStub.hpp  Parser.cpp  ParserFactoryMock.hpp  ParserMock.hpp  Script.cpp  ScriptCompiler.cpp  ScriptCompilerFactoryMock.hpp  ScriptFactoryMock.hpp  ScriptFunction.cpp  ScriptInterfaceMock.hpp  ScriptMock.hpp  ScriptParser.cpp  ScriptParserFactoryMock.hpp  ScriptStatementHandler.cpp  ScriptVariableTable.cpp  StatementFactoryMock.hpp  StatementHandler.cpp  StatementHandlerFactoryMock.hpp  StatementHandlerMock.hpp  StatementMock.hpp  StatementStub.hpp  VariableTable.cpp  VariableTableMock.hpp
gs/test/unit/expr/: MethodCall.cpp  Object.cpp
gs/test/unit/stmt/: CallMethod.cpp  Return.cpp
tools/: CodeWizard.py
